# lenclaw

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  Caddyfile  DEMO_SCRIPT.md  HANDOFF_REPORT.md  LENDOOR_RESEARCH.md  Makefile  OPENCLAW_RESEARCH.md  PITCH_DECK.md  PRODUCT_SPEC.md  PROJECT_REVIEW.md  README.md  TOMI2_REVIEW.md  TOMI_REVIEW.md  VAULT_PER_AGENT_PROMPT.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml  security.yml
agents/cryptobro/: __main__.py  cryptobro.py  feeds.py  market.py  requirements.txt  vibes.py
agents/lending-agent/: .env.example  AGENTS.md  SOUL.md  index.ts  package.json
agents/wdk-agent/: .env.example  README.md  package.json
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  worker.py
backend/config/local/: config.toml
backend/src/: main.py
backend/src/agent/: router.py  schemas.py  service.py
backend/src/auth/: dependencies.py  router.py  schemas.py  service.py
backend/src/bridge/: __init__.py  router.py  schemas.py  service.py
backend/src/common/: config.py  exceptions.py  schemas.py
backend/src/credit/: features.py  ml_scoring.py  model.py  router.py  schemas.py  scoring.py  service.py  training_data.py
backend/src/db/: base.py  models.py  session.py
backend/src/db/migrations/: env.py
backend/src/fiat/: __init__.py  models.py  router.py  schemas.py  service.py
backend/src/liquidation/: __init__.py  models.py  router.py  schemas.py  service.py
backend/src/market/: __init__.py  models.py  router.py  schemas.py  service.py
backend/src/monitoring/: router.py  schemas.py  service.py
backend/src/pool/: router.py  schemas.py  service.py
backend/src/revenue/: router.py  schemas.py  service.py
backend/src/sdk/: __init__.py  x402_client.py  x402_server.py
backend/src/workers/: __init__.py  base.py  chain_sync_worker.py  config.py  credit_scoring_worker.py  monitoring_worker.py  revenue_sync_worker.py  scheduler.py
backend/src/workers/observability/: __init__.py  logging.py  metrics.py
backend/src/workers/resilience/: __init__.py  circuit_breaker.py  dead_letter.py  rate_limiter.py  retry.py
backend/src/x402/: __init__.py  middleware.py  protocol.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_config.py  test_credit_scoring.py  test_schemas.py
backend/tests/unit/: test_agent_crud.py  test_api_contracts.py  test_auth.py  test_credit_scoring.py  test_pool_stats.py  test_revenue_tracking.py
bridge/: __init__.py  daemon.py  requirements.txt
bridge/connectors/: __init__.py  base_connector.py  mercadopago_connector.py  square_connector.py  stripe_connector.py
bridge/oracle/: __init__.py  config.py  reporter.py  service.py
contracts/: README.md  deployments.json  foundry.toml
contracts/deployments/: base-wdk.json  base.json
contracts/script/: Deploy.s.sol  DeployArbitrum.s.sol  DeployBase.s.sol  DeployBaseSepolia.s.sol  DeployOptimism.s.sol  DeployPolygon.s.sol  DeployWDK.s.sol  DeployZKVerifier.s.sol  VerifyContracts.s.sol
contracts/src/: AgentCreditLine.sol  AgentRegistry.sol  AgentSmartWallet.sol  AgentVault.sol  AgentVaultFactory.sol  CreditScorer.sol  CrossChainRevenue.sol  DutchAuction.sol  HonkVerifier.sol  JuniorTranche.sol  LenclawVault.sol  LiquidationKeeper.sol  RecoveryManager.sol  RevenueLockbox.sol  SeniorTranche.sol  SmartWalletFactory.sol  (+7 more)
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
tee/: README.md
wdk-api/: package-lock.json  package.json  server.js
wdk-service/: .env.example  README.md  pyproject.toml
wdk-service/src/: config.py  indexer.py  main.py  registry.py  routes.py  tasks.py  wallet.py
wdk-service/src/lenclaw_wdk_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
zk/: README.md
(+153 files in other folders)
