[build-system]
requires = ["hatchling>=1.13"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "lenclaw"
version = "0.1.0"
description = "Lenclaw - AI Agent Lending Protocol Backend"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "web3>=7.6.0",
    "siwe>=4.3.0",
    "eth-account>=0.13.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.28.0",
    "orjson>=3.10.0",
    "python-multipart>=0.0.18",
    "redis[hiredis]>=5.0.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
    "coverage>=7.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit",
    "integration",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF",
]
ignore = [
    "N818", "UP015",
    "B008",  # Depends() in defaults — standard FastAPI pattern
    "E501",  # line too long — formatter handles what it can
    "B007",  # unused loop variable — common in test loops
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N803", "N806", "B017"]
"src/x402/*" = ["N806"]
"src/market/*" = ["N806"]
"src/credit/*" = ["N806", "N803"]  # ML convention: X_train, X_val

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
files = ["src"]
strict = true
ignore_missing_imports = true
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin",
]
