[project]
name = "lenclaw-wdk-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "mnemonic>=0.21",
    "eth-account>=0.13.0",
    "web3>=7.0.0",
    "httpx>=0.28.0",
    "celery[redis]>=5.4.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0"]
